--- a/public/index-old.html
+++ b/public/index-old.html
@@ -33,12 +33,12 @@
     
 		<title>Lewis Campbell Technologies</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
-		<link rel="shortcut icon" type="image/png" href="/img/LC-icon-whitebackground02-01.png"/>
+		<link rel="shortcut icon" type="image/png" href="/img/icon/icon32.png"/>
 		<link rel="manifest" href="/manifest.json">
 	</head>
 	<body>
 		<nav>
-			<a href="/" id="home">Home</a>
+			<a href="/" id="home"><img src="/img/icon/icon46.png"/></a>
 			<span id="links">
 				<a href="/hire.html">Hire</a>
 				<a href="/about.html">About</a>
