--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-YVVNR2QNZ7"></script>
 		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-YVVNR2QNZ7');
+		</script>
+		<script async>
 		  if ("serviceWorker" in navigator) {
 	      navigator.serviceWorker.register("/sw.js", {scope: "/",})
 	      	.then(registration => {
@@ -17,13 +24,7 @@
 	      	})
 	      	.catch(error => console.error(`Registration failed with ${error}`))
 	      }
-
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-
-		  gtag('config', 'G-YVVNR2QNZ7');
-		</script>
+    </script>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes">
