everything that will appear on the site should be in www, because having images in 'src' just feels weird

--- a/www/index-old.html
+++ b/www/index-old.html
@@ -38,10 +38,12 @@
 	</head>
 	<body>
 		<nav>
-			<a href="/" id="home"><img src="/img/icon/icon46.png"/></a>
+			<a href="/" id="home"><img src="/img/icon/icon46.webp"/></a>
 			<span id="links">
 				<a href="/hire.html">Hire</a>
-				<a href="/about.html">About</a>
+				<a href="/contact.html">Contact</a>
+				<a href="/prototypes.html">Experiments</a>
+				<a href="/talks.html">Talks</a>
 				<a href="/blog.html">Blog</a>
 			</span>
 		</nav>
