--- a/www/sync.html
+++ b/www/sync.html
@@ -80,6 +80,6 @@
     <main>
 
     </main>
-    <script type="module" src="/src/sync.jsx"></script>
+    <script type="module" src="/sync.jsx"></script>
   </body>
 </html>
