adding some tables to hire page

--- a/www/hire.html
+++ b/www/hire.html
@@ -43,8 +43,7 @@
 			</span>
 		</nav>
     <main>
-			<p>My speciality is capturing data across the supply chain. Often
-in</p>
+			<p>My speciality is capturing data across the supply chain. Often in</p>
 <p>The technical challenges of capturing data in remote
 environments,</p>
 <ul>
@@ -119,8 +118,31 @@ their internal state changes as they merge. Utilises property based
 testing to ensure idempotence, commutativity and associativity.</p>
 <h2 id="self-employment">Self-Employment</h2>
 <h3 id="supply-chain-consulting">Supply Chain Consulting</h3>
-<p>Company: Unique Excellence Where: Australia (Remote) When: 2022 Tech:
-Google docs, Email, Github (this was a pure consulting role)</p>
+<table>
+<colgroup>
+<col style="width: 31%" />
+<col style="width: 31%" />
+<col style="width: 18%" />
+<col style="width: 18%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Company</th>
+<th style="text-align: left;">Where</th>
+<th style="text-align: left;">When</th>
+<th style="text-align: left;">Tech</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">Unique Excellence</td>
+<td style="text-align: left;">Australia (Remote)</td>
+<td style="text-align: left;">2022</td>
+<td style="text-align: left;">Google docs, Email, Github (pure
+consulting role)</td>
+</tr>
+</tbody>
+</table>
 <h3 id="remote-water-monitoring-startup">Remote water-monitoring
 startup</h3>
 <p>Company: Farmbot Monitoring Solutions Where: Australia (Remote) When:
