moved template file, fixed up makefile with the help of Mr. Sheets

--- a/www/hire.html
+++ b/www/hire.html
@@ -74,7 +74,43 @@ me</h1>
 <h2 id="piece-of-paper">Piece of Paper</h2>
 <p>BSc Computer Science from Massey University, New Zealand</p>
 <h2 id="papers-ive-perused">Papers I’ve perused</h2>
-<p>Read %, Understood %, Implemented %</p>
+<table style="width:100%;">
+<colgroup>
+<col style="width: 58%" />
+<col style="width: 8%" />
+<col style="width: 16%" />
+<col style="width: 17%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Name</th>
+<th style="text-align: left;"></th>
+<th style="text-align: left;">Implemented</th>
+<th style="text-align: left;"></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">An Optimized Conflict-free Replicated
+Set</td>
+<td style="text-align: left;">5/5</td>
+<td style="text-align: left;">4/5</td>
+<td style="text-align: left;">5/5</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Viewstamped Replication Revisited</td>
+<td style="text-align: left;">5/5</td>
+<td style="text-align: left;">4/5</td>
+<td style="text-align: left;">0/5</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+</tr>
+</tbody>
+</table>
 <h1 id="places-ive-worked">Places I’ve worked</h1>
 <h2 id="portfolio">Portfolio</h2>
 <p>Sync About It https://lewiscampbell.tech/sync.html</p>
@@ -91,8 +127,30 @@ startup</h3>
 2022</p>
 <h3 id="livestock-supply-chain-traceability-startup">Livestock supply
 chain traceability startup</h3>
-<p>Company: Aglive Where: Australia (Remote) When: 2020-2021 Tech:
-React.js, Node.js, MongoDB</p>
+<table>
+<colgroup>
+<col style="width: 22%" />
+<col style="width: 47%" />
+<col style="width: 14%" />
+<col style="width: 14%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Company</th>
+<th style="text-align: left;">Where</th>
+<th style="text-align: left;">When</th>
+<th style="text-align: left;">Tech</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">Aglive</td>
+<td style="text-align: left;">Australia (Remote)</td>
+<td style="text-align: left;">2020-2021</td>
+<td style="text-align: left;">React, Node, MongoDB</td>
+</tr>
+</tbody>
+</table>
 <p>Fond memories of this one.</p>
 <h3 id="web-development-agency">Web Development Agency</h3>
 <p>Company: Derp Technlogies (yes, that was really their name) Where:
@@ -135,8 +193,10 @@ a desktop app.</p>
 <p>What / When / Where</p>
 <h3 id="livestock-product-manufacturer">Livestock Product
 Manufacturer</h3>
-<p>Company: Allflex Livestock Intelligence Where: New Zealand When:
-2016-2020 Tech: C#, ASP.NET, SQL Server, Dynamics GP (don’t ask)</p>
+<p>Company: Allflex Livestock Intelligence</p>
+<p>Where: New Zealand</p>
+<p>When: 2016-2020</p>
+<p>Tech: C#, ASP.NET, SQL Server, Dynamics GP (don’t ask)</p>
 <p>Biggest legacy system I’d worked on to date.</p>
 <p>I learned the value of keeping a system running - our software went
 down, and two factories stopped functioning.</p>
