changed pandoc to output correct quotes

--- a/www/hire.html
+++ b/www/hire.html
@@ -43,7 +43,8 @@
 			</span>
 		</nav>
     <main>
-			<p>My speciality is capturing data across the supply chain. Often in</p>
+			<p>My speciality is capturing data across the supply chain. Often in
+remote or</p>
 <p>The technical challenges of capturing data in remote
 environments,</p>
 <ul>
@@ -51,7 +52,7 @@ environments,</p>
 <li>data captured in the field</li>
 <li>the fringe of the supply chain, areas with poor connectivity</li>
 </ul>
-<p>“I am a software developer with expertise in supply chain management
+<p>I am a software developer with expertise in supply chain management
 and a focus on creating software solutions that facilitate the movement
 and tracking of goods and services. With additional experience in
 developing software for field use, I have worked with factory workers,
