starting to use definition lists instead of tables for employment entries

--- a/www/hire.html
+++ b/www/hire.html
@@ -74,6 +74,11 @@ me</h1>
 <h2 id="piece-of-paper">Piece of Paper</h2>
 <p>BSc Computer Science from Massey University, New Zealand</p>
 <h2 id="papers-ive-perused">Papers I’ve perused</h2>
+<ul>
+<li>Only understood a part of it</li>
+<li>Got the general gist of it</li>
+<li>Grokked it pretty well</li>
+</ul>
 <table style="width:100%;">
 <colgroup>
 <col style="width: 58%" />
@@ -119,31 +124,32 @@ their internal state changes as they merge. Utilises property based
 testing to ensure idempotence, commutativity and associativity.</p>
 <h2 id="self-employment">Self-Employment</h2>
 <h3 id="supply-chain-consulting">Supply Chain Consulting</h3>
-<table>
-<colgroup>
-<col style="width: 31%" />
-<col style="width: 31%" />
-<col style="width: 18%" />
-<col style="width: 18%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th style="text-align: left;">Company</th>
-<th style="text-align: left;">Where</th>
-<th style="text-align: left;">When</th>
-<th style="text-align: left;">Tech</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: left;">Unique Excellence</td>
-<td style="text-align: left;">Australia (Remote)</td>
-<td style="text-align: left;">2022</td>
-<td style="text-align: left;">Google docs, Email, Github (pure
-consulting role)</td>
-</tr>
-</tbody>
-</table>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Unique Excellence
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Australia (Remote)
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2022
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+Google docs, Email, Github, Word (pure consulting role)
+</dd>
+</dl>
 <h3 id="remote-water-monitoring-startup">Remote water-monitoring
 startup</h3>
 <p>Company: Farmbot Monitoring Solutions Where: Australia (Remote) When:
