everything is now dt

--- a/www/hire.html
+++ b/www/hire.html
@@ -152,10 +152,62 @@ Google docs, Email, Github, Word (pure consulting role)
 </dl>
 <h3 id="remote-water-monitoring-startup">Remote water-monitoring
 startup</h3>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Farmbot Monitoring Solutions
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Australia (Remote)
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2022
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+React, Typescript, IndexedDB
+</dd>
+</dl>
 <p>Company: Farmbot Monitoring Solutions Where: Australia (Remote) When:
 2022</p>
 <h3 id="livestock-supply-chain-traceability-startup">Livestock supply
 chain traceability startup</h3>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Aglive
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Australia (Remote)
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2020-2021
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+React, Typescript, Node, MongoDB
+</dd>
+</dl>
 <table>
 <colgroup>
 <col style="width: 22%" />
@@ -182,8 +234,32 @@ chain traceability startup</h3>
 </table>
 <p>Fond memories of this one.</p>
 <h3 id="web-development-agency">Web Development Agency</h3>
-<p>Company: Derp Technlogies (yes, that was really their name) Where:
-New Zealand (Remote) When: 2020</p>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Derp Technology (yes, that was really their name…)
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+New Zealand (Remote)
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2020
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+React, Typescript, AWS, Google Maps
+</dd>
+</dl>
 <p>First time doing exclusively webdev, and first time I’d worked off
 any design more sophisticated than a wireframe mock-up.</p>
 <p>Highlights include :</p>
@@ -197,8 +273,32 @@ end.</p></li>
 </ul>
 <h3 id="local-government-election-processing">Local Government Election
 Processing</h3>
-<p>Company: Election Services (New Zealand) Where: Auckland, New Zealand
-When: 2014-2015 Tech: C++, Qt, VB.NET</p>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Election Services
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Auckland, New Zealand
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2014-2015
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+C++, Qt, Postgres
+</dd>
+</dl>
 <p>Aka my accidental year of C++ experience (bit of a confusion between
 ‘C#’ and ‘C++’ during the recruitment process, but everyone just went
 with it).</p>
@@ -207,8 +307,32 @@ software. It was a Qt desktop app, and in hindsight I should have pushed
 for something like Python-Qt.</p>
 <h3 id="airport-maintenance-crew-software">Airport Maintenance Crew
 Software</h3>
-<p>Company: Novo-technical services Where: New Zealand When: 2014 Tech:
-F#, WinForms, Excel</p>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+NovoTech Ltd
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Auckland Airport, New Zealand
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2014
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+F#, Excel, JD Edwards
+</dd>
+</dl>
 <p>My first time writing software professionally, and it had a huge
 impact on me.</p>
 <p>Finally had my degree, but also had a truck-load of doubts if I could
@@ -219,19 +343,65 @@ out of the park. It was a real confidence booster.</p>
 F#. No one there even knew or cared what C# or F# was, they just wanted
 a desktop app.</p>
 <h2 id="employed">Employed</h2>
-<p>What / When / Where</p>
 <h3 id="livestock-product-manufacturer">Livestock Product
 Manufacturer</h3>
-<p>Company: Allflex Livestock Intelligence</p>
-<p>Where: New Zealand</p>
-<p>When: 2016-2020</p>
-<p>Tech: C#, ASP.NET, SQL Server, Dynamics GP (don’t ask)</p>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Allflex Livestock Intelligence
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Palmerston North, New Zealand
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2016-2020
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+C#, ASP.NET, SQL Server, Dyanmics GP (don’t ask)
+</dd>
+</dl>
 <p>Biggest legacy system I’d worked on to date.</p>
 <p>I learned the value of keeping a system running - our software went
 down, and two factories stopped functioning.</p>
+<p>Exposed to a vertical slice of the whole supply chain</p>
 <h3 id="practice-management-software">Practice Management Software</h3>
-<p>Company: Gensolve Where: New Zealand When: 2014-2015 Tech: C#, Oracle
-Database</p>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Gensolve
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Wellington, New Zealand
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2014-2015
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+C#, Oracle Database
+</dd>
+</dl>
 <p>This was the first time I saw real life legacy software, and wow was
 it an eye opener.</p>
 <p>They ended up closing the local office, and after a stint of remote
