--- a/www/hire.html
+++ b/www/hire.html
@@ -38,7 +38,7 @@
 			<span id="links">
 				<a href="/hire.html">Hire</a>
 				<a href="/contact.html">Contact</a>
-				<a href="/prototypes.html">Experiments</a>
+				<a href="/projects.html">Projects</a>
 				<a href="/talks.html">Talks</a>
 			</span>
 		</nav>
