- editor config changed due to bug in neovim - added makefile live reload to devserve - making list of papers I've read a table - styling for definition lists

--- a/input/template.html
+++ b/input/template.html
@@ -34,7 +34,7 @@
 	</head>
 	<body>
 		<nav>
-			<a href="/" id="home"><img src="/img/icon/icon46.webp"/></a>
+			<a href="/" id="home"><img src="/img/icon/icon46.webp" alt="ᛚᚳ"/></a>
 			<span id="links">
 				<a href="/hire.html">Hire</a>
 				<a href="/contact.html">Contact</a>
