--- a/www/hire.html
+++ b/www/hire.html
@@ -34,7 +34,7 @@
 	</head>
 	<body>
 		<nav>
-			<a href="/" id="home"><img src="/img/icon/icon46.webp"/></a>
+			<a href="/" id="home"><img src="/img/icon/icon46.webp" alt="ᛚᚳ"/></a>
 			<span id="links">
 				<a href="/hire.html">Hire</a>
 				<a href="/contact.html">Contact</a>
@@ -70,49 +70,79 @@ lead/architect/consultant thrown in.</p>
 an area I’m passionate about - distributed databases.</p>
 <h1 id="what-people-have-said-about-me">What people have said about
 me</h1>
-<h1 id="what-ive-studied">What I’ve studied</h1>
-<h2 id="piece-of-paper">Piece of Paper</h2>
-<p>BSc Computer Science from Massey University, New Zealand</p>
-<h2 id="papers-ive-perused">Papers I’ve perused</h2>
-<ul>
-<li>Only understood a part of it</li>
-<li>Got the general gist of it</li>
-<li>Grokked it pretty well</li>
-</ul>
-<table style="width:100%;">
+<h1 id="education">Education</h1>
+<h2 id="certifications">Certifications</h2>
+<p>BSc Computer Science from Massey University, New Zealand B1
+Certificate Goethte Institut</p>
+<h2 id="self-study">Self study</h2>
+<table>
+<thead>
+<tr>
+<th>
+Paper
+</th>
+<th>
+Understanding
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+<cite>An Optimized Conflict-free Replicated Set<cite>
+</td>
+<td>
+<meter min="0" max="3" value="3"/>
+</td>
+</tr>
+<tr>
+<td>
+<cite>Viewstamped Replication Revisited</cite>
+</td>
+<td>
+<meter min="0" max="3" value="2"/>
+</td>
+</tr>
+<tr>
+<td>
+<cite>Conflict-Free replicated Relations for Multi-Synchronous Database
+Management at Edge</cite>
+</td>
+<td>
+<meter min="0" max="3" value="1"/>
+</td>
+</tr>
+</tbody>
+</table>
+<table>
 <colgroup>
-<col style="width: 58%" />
-<col style="width: 8%" />
-<col style="width: 16%" />
-<col style="width: 17%" />
+<col style="width: 74%" />
+<col style="width: 25%" />
 </colgroup>
 <thead>
 <tr class="header">
-<th style="text-align: left;">Name</th>
-<th style="text-align: left;"></th>
-<th style="text-align: left;">Implemented</th>
-<th style="text-align: left;"></th>
+<th style="text-align: left;">Paper</th>
+<th style="text-align: left;">Understanding</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">An Optimized Conflict-free Replicated
-Set</td>
-<td style="text-align: left;">5/5</td>
-<td style="text-align: left;">4/5</td>
-<td style="text-align: left;">5/5</td>
+<td style="text-align: left;"><cite>An Optimized Conflict-free
+Replicated Set<cite></td>
+<td style="text-align: left;"><meter min="1" max="3" value="3" /></td>
 </tr>
 <tr class="even">
 <td style="text-align: left;">Viewstamped Replication Revisited</td>
-<td style="text-align: left;">5/5</td>
-<td style="text-align: left;">4/5</td>
-<td style="text-align: left;">0/5</td>
+<td style="text-align: left;"><meter min="1" max="3" value="2" /></td>
 </tr>
 <tr class="odd">
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;"></td>
+<td style="text-align: left;">Why Logical clocks are Easy</td>
+<td style="text-align: left;"><meter min="1" max="3" value="2" /></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">A comprehensive study of Convergent and
+Commutative Replicated Data types</td>
+<td style="text-align: left;"><meter min="1" max="3" value="2" /></td>
 </tr>
 </tbody>
 </table>
@@ -178,8 +208,6 @@ Tech
 React, Typescript, IndexedDB
 </dd>
 </dl>
-<p>Company: Farmbot Monitoring Solutions Where: Australia (Remote) When:
-2022</p>
 <h3 id="livestock-supply-chain-traceability-startup">Livestock supply
 chain traceability startup</h3>
 <dl>
@@ -208,30 +236,6 @@ Tech
 React, Typescript, Node, MongoDB
 </dd>
 </dl>
-<table>
-<colgroup>
-<col style="width: 22%" />
-<col style="width: 47%" />
-<col style="width: 14%" />
-<col style="width: 14%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th style="text-align: left;">Company</th>
-<th style="text-align: left;">Where</th>
-<th style="text-align: left;">When</th>
-<th style="text-align: left;">Tech</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: left;">Aglive</td>
-<td style="text-align: left;">Australia (Remote)</td>
-<td style="text-align: left;">2020-2021</td>
-<td style="text-align: left;">React, Node, MongoDB</td>
-</tr>
-</tbody>
-</table>
 <p>Fond memories of this one.</p>
 <h3 id="web-development-agency">Web Development Agency</h3>
 <dl>
@@ -260,9 +264,6 @@ Tech
 React, Typescript, AWS, Google Maps
 </dd>
 </dl>
-<p>First time doing exclusively webdev, and first time I’d worked off
-any design more sophisticated than a wireframe mock-up.</p>
-<p>Highlights include :</p>
 <ul>
 <li><p>replacing a paid for theme, and in the process replacing 7k lines
 of SASS with 1k lines of CSS and having it look exactly the
@@ -299,12 +300,9 @@ Tech
 C++, Qt, Postgres
 </dd>
 </dl>
-<p>Aka my accidental year of C++ experience (bit of a confusion between
-‘C#’ and ‘C++’ during the recruitment process, but everyone just went
-with it).</p>
-<p>Big lesson I took away here was how unproductive C++ was for CRUD
-software. It was a Qt desktop app, and in hindsight I should have pushed
-for something like Python-Qt.</p>
+<ul>
+<li>Learned C++ on the job</li>
+</ul>
 <h3 id="airport-maintenance-crew-software">Airport Maintenance Crew
 Software</h3>
 <dl>
@@ -319,18 +317,6 @@ Where
 </dt>
 <dd>
 Auckland Airport, New Zealand
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2014
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-F#, Excel, JD Edwards
 </dd>
 </dl>
 <p>My first time writing software professionally, and it had a huge
@@ -393,7 +379,7 @@ Wellington, New Zealand
 When
 </dt>
 <dd>
-2014-2015
+2014-2015 (Office closed)
 </dd>
 <dt>
 Tech
