making site look like old school research papers

--- a/www/hire.html
+++ b/www/hire.html
@@ -43,7 +43,8 @@
 			</span>
 		</nav>
     <main>
-			<p>My speciality is capturing data across the supply chain. Often in
+			<h1 id="introduction">Introduction</h1>
+<p>My speciality is capturing data across the supply chain. Often in
 remote or</p>
 <p>The technical challenges of capturing data in remote
 environments,</p>
@@ -72,8 +73,10 @@ an area I’m passionate about - distributed databases.</p>
 me</h1>
 <h1 id="education">Education</h1>
 <h2 id="certifications">Certifications</h2>
-<p>BSc Computer Science from Massey University, New Zealand B1
-Certificate Goethte Institut</p>
+<h3 id="bsc-computer-science">BSc Computer Science</h3>
+<p>Massey University, New Zealand</p>
+<h3 id="german-language-b1">German Language B1</h3>
+<p>Goethe-Zertifikat B1, Goethe Institut in Wellington</p>
 <h2 id="self-study">Self study</h2>
 <table>
 <thead>
@@ -89,60 +92,78 @@ Understanding
 <tbody>
 <tr>
 <td>
-<cite>An Optimized Conflict-free Replicated Set<cite>
+<i>An Optimized Conflict-Free Replicated Set<i>
 </td>
 <td>
-<meter min="0" max="3" value="3"/>
+<meter min="0" max="3" value="3" />
 </td>
 </tr>
 <tr>
 <td>
-<cite>Viewstamped Replication Revisited</cite>
+<i>Viewstamped Replication Revisited</i>
 </td>
 <td>
-<meter min="0" max="3" value="2"/>
+<meter min="0" max="3" value="2" />
 </td>
 </tr>
 <tr>
 <td>
-<cite>Conflict-Free replicated Relations for Multi-Synchronous Database
-Management at Edge</cite>
+<i>Conflict-Free replicated Relations for Multi-Synchronous Database
+Management at Edge</i>
 </td>
 <td>
-<meter min="0" max="3" value="1"/>
+<meter min="0" max="3" value="1" />
 </td>
 </tr>
-</tbody>
-</table>
-<table>
-<colgroup>
-<col style="width: 74%" />
-<col style="width: 25%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th style="text-align: left;">Paper</th>
-<th style="text-align: left;">Understanding</th>
+<tr>
+<td>
+<i>Why Logical Clocks Are Easy</i>
+</td>
+<td>
+<meter min="0" max="3" value="2" />
+</td>
 </tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: left;"><cite>An Optimized Conflict-free
-Replicated Set<cite></td>
-<td style="text-align: left;"><meter min="1" max="3" value="3" /></td>
+<tr>
+<td>
+<i>Logical Physical Clocks and Consistent Snapshots in Globally
+Distributed Systems</i>
+</td>
+<td>
+<meter min="0" max="3" value="1" />
+</td>
 </tr>
-<tr class="even">
-<td style="text-align: left;">Viewstamped Replication Revisited</td>
-<td style="text-align: left;"><meter min="1" max="3" value="2" /></td>
+<tr>
+<td>
+<i>Delta State Replicated Data Types</i>
+</td>
+<td>
+<meter min="0" max="3" value="1" />
+</td>
 </tr>
-<tr class="odd">
-<td style="text-align: left;">Why Logical clocks are Easy</td>
-<td style="text-align: left;"><meter min="1" max="3" value="2" /></td>
+<tr>
+<td>
+<i>Detection of Mutual Inconsistency in Distributed Systems</i>
+</td>
+<td>
+<meter min="0" max="3" value="2" />
+</td>
 </tr>
-<tr class="even">
-<td style="text-align: left;">A comprehensive study of Convergent and
-Commutative Replicated Data types</td>
-<td style="text-align: left;"><meter min="1" max="3" value="2" /></td>
+<tr>
+<td>
+<i>Time, Clocks, and the Ordering of Events in a Distributed System</i>
+</td>
+<td>
+<meter min="0" max="3" value="2" />
+</td>
+</tr>
+<tr>
+<td>
+<i>Timestamps in Message-Passing Systems That Preserve the Partial
+Ordering</i>
+</td>
+<td>
+<meter min="0" max="3" value="2" />
+</td>
 </tr>
 </tbody>
 </table>
@@ -180,8 +201,8 @@ Tech
 Google docs, Email, Github, Word (pure consulting role)
 </dd>
 </dl>
-<h3 id="remote-water-monitoring-startup">Remote water-monitoring
-startup</h3>
+<h3 id="remote-water-monitoring-startup">Remote Water-monitoring
+Startup</h3>
 <dl>
 <dt>
 Company
@@ -391,7 +412,7 @@ C#, Oracle Database
 <p>This was the first time I saw real life legacy software, and wow was
 it an eye opener.</p>
 <p>They ended up closing the local office, and after a stint of remote
-work I was made redundant shortly after.</p>     
+work I was made red shortly after.</p>     
 		</main>
 	</body>
 </html>
