--- a/www/hire.html
+++ b/www/hire.html
@@ -44,6 +44,11 @@
 		</nav>
     <main>
 			<h1 id="introduction">Introduction</h1>
+<ul>
+<li>Supply chain</li>
+<li>Field technology</li>
+<li>Network resiliency</li>
+</ul>
 <p>My speciality is capturing data across the supply chain. Often in
 remote or</p>
 <p>The technical challenges of capturing data in remote
@@ -69,14 +74,35 @@ lead/architect/consultant thrown in.</p>
 <h1 id="what-im-looking-for">What I’m looking for</h1>
 <p>My biggest goal right now is to work with smart, motivated people in
 an area I’m passionate about - distributed databases.</p>
-<h1 id="what-people-have-said-about-me">What people have said about
-me</h1>
 <h1 id="education">Education</h1>
-<h2 id="certifications">Certifications</h2>
-<h3 id="bsc-computer-science">BSc Computer Science</h3>
-<p>Massey University, New Zealand</p>
-<h3 id="german-language-b1">German Language B1</h3>
-<p>Goethe-Zertifikat B1, Goethe Institut in Wellington</p>
+<dl>
+<dt>
+Quallifcation
+</dt>
+<dd>
+BSc Computer Science
+</dd>
+<dt>
+Institution
+</dt>
+<dd>
+Massey University
+</dd>
+</dl>
+<dl>
+<dt>
+Quallifcation
+</dt>
+<dd>
+B1 Certificate in German Language
+</dd>
+<dt>
+Institution
+</dt>
+<dd>
+Goethe Institut
+</dd>
+</dl>
 <h2 id="self-study">Self study</h2>
 <table>
 <thead>
@@ -167,14 +193,8 @@ Ordering</i>
 </tr>
 </tbody>
 </table>
-<h1 id="places-ive-worked">Places I’ve worked</h1>
-<h2 id="portfolio">Portfolio</h2>
-<p>Sync About It https://lewiscampbell.tech/sync.html</p>
-<p>Implementations of conflict free data-types (CRDTs), illustrating how
-their internal state changes as they merge. Utilises property based
-testing to ensure idempotence, commutativity and associativity.</p>
-<h2 id="self-employment">Self-Employment</h2>
-<h3 id="supply-chain-consulting">Supply Chain Consulting</h3>
+<h1 id="past-clients">Past Clients</h1>
+<h2 id="supply-chain-consulting">Supply Chain Consulting</h2>
 <dl>
 <dt>
 Company
@@ -201,8 +221,7 @@ Tech
 Google docs, Email, Github, Word (pure consulting role)
 </dd>
 </dl>
-<h3 id="remote-water-monitoring-startup">Remote Water-monitoring
-Startup</h3>
+<h2 id="remote-water-monitoring">Remote Water Monitoring</h2>
 <dl>
 <dt>
 Company
@@ -229,8 +248,8 @@ Tech
 React, Typescript, IndexedDB
 </dd>
 </dl>
-<h3 id="livestock-supply-chain-traceability-startup">Livestock supply
-chain traceability startup</h3>
+<h2 id="supply-chain-traceability-for-livestock">Supply Chain
+Traceability for Livestock</h2>
 <dl>
 <dt>
 Company
@@ -258,7 +277,7 @@ React, Typescript, Node, MongoDB
 </dd>
 </dl>
 <p>Fond memories of this one.</p>
-<h3 id="web-development-agency">Web Development Agency</h3>
+<h2 id="web-development-agency">Web Development Agency</h2>
 <dl>
 <dt>
 Company
@@ -293,8 +312,7 @@ same.</p></li>
 comments, and then finally a pretty trivial transformation at the
 end.</p></li>
 </ul>
-<h3 id="local-government-election-processing">Local Government Election
-Processing</h3>
+<h2 id="election-processing">Election Processing</h2>
 <dl>
 <dt>
 Company
@@ -324,8 +342,7 @@ C++, Qt, Postgres
 <ul>
 <li>Learned C++ on the job</li>
 </ul>
-<h3 id="airport-maintenance-crew-software">Airport Maintenance Crew
-Software</h3>
+<h2 id="airport-maintenance-software">Airport Maintenance Software</h2>
 <dl>
 <dt>
 Company
@@ -349,9 +366,9 @@ out of the park. It was a real confidence booster.</p>
 <p>Note: I was full of functional fervour at the time, so I wrote it in
 F#. No one there even knew or cared what C# or F# was, they just wanted
 a desktop app.</p>
-<h2 id="employed">Employed</h2>
-<h3 id="livestock-product-manufacturer">Livestock Product
-Manufacturer</h3>
+<h1 id="employment-history">Employment History</h1>
+<h2 id="livestock-product-manufacturer">Livestock Product
+Manufacturer</h2>
 <dl>
 <dt>
 Company
@@ -382,7 +399,7 @@ C#, ASP.NET, SQL Server, Dyanmics GP (don’t ask)
 <p>I learned the value of keeping a system running - our software went
 down, and two factories stopped functioning.</p>
 <p>Exposed to a vertical slice of the whole supply chain</p>
-<h3 id="practice-management-software">Practice Management Software</h3>
+<h2 id="practice-management-software">Practice Management Software</h2>
 <dl>
 <dt>
 Company
