--- a/www/projects.html
+++ b/www/projects.html
@@ -27,7 +27,7 @@
 			property="og:description" 
 			content="Software consultant, specialising in livestock traceability and agricultural logistics."
 		/>
-		<title>Contact</title>
+		<title>Projects</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link rel="shortcut icon" type="image/png" href="/img/icon/icon32.png"/>
 		<link rel="manifest" href="/manifest.json">
@@ -43,13 +43,25 @@
 			</span>
 		</nav>
     <main>
-			<h1 id="get-in-touch">Get in touch</h1>
-<p>Email me at <a
-href="mailto:info@lewiscampbell.tech">info@lewiscampbell.tech</a></p>
-<h2 id="social-media">Social Media</h2>
-<p><a href="https://twitter.com/LewisCTech">Twitter</a></p>
+			<h1 id="projects">Projects</h1>
+<h2 id="sync-about-it">Sync about it</h2>
+<p><a href="/sync.html">Try online</a></p>
 <p><a
-href="https://www.linkedin.com/in/lewisandrewcampbell/">LinkedIn</a></p>     
+href="https://github.com/LAC-Tech/website/blob/master/www/crdt.js">Source
+Code</a></p>
+<p>Sync contains my implementations of CRDTs from the following
+papers:</p>
+<ul>
+<li>“A comprehensive study of convergent and commutative replicated data
+types” (Marc Shapiro, Nuno Preguiça, Carlos Baquero, and Marek
+Zawirski)</li>
+<li>“An optimized conflict-free replicated set.” (Annette Bieniusa,
+Marek Zawirski, Nuno Preguiça, Marc Shapiro, Carlos Baquero, Valter
+Balegas, and Sérgio Duarte)</li>
+</ul>
+<p>All CRDTs implemented show their internal state, and have all been
+extensively tested for associativity, commutativity and idempotence
+using property based testing.</p>     
 		</main>
 	</body>
 </html>
