--- a/www/talks.html
+++ b/www/talks.html
@@ -27,7 +27,7 @@
 			property="og:description" 
 			content="Software consultant, specialising in livestock traceability and agricultural logistics."
 		/>
-		<title>Contact</title>
+		<title>Talks</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link rel="shortcut icon" type="image/png" href="/img/icon/icon32.png"/>
 		<link rel="manifest" href="/manifest.json">
@@ -43,13 +43,15 @@
 			</span>
 		</nav>
     <main>
-			<h1 id="get-in-touch">Get in touch</h1>
-<p>Email me at <a
-href="mailto:info@lewiscampbell.tech">info@lewiscampbell.tech</a></p>
-<h2 id="social-media">Social Media</h2>
-<p><a href="https://twitter.com/LewisCTech">Twitter</a></p>
-<p><a
-href="https://www.linkedin.com/in/lewisandrewcampbell/">LinkedIn</a></p>     
+			<h1 id="talks">Talks</h1>
+<p><a href="https://youtu.be/NfzicLsgjl4">Biggest Technical Mistakes B2B
+Companies make.</a></p>
+<iframe width="420" height="315" src="https://youtu.be/NfzicLsgjl4">
+</iframe>
+<p><a href="https://youtu.be/kCmOfRcmkN0">Gettin’ Ziggy Wit It - Why I
+am convinced Zig is the C successor we’ve been waiting for</a></p>
+<iframe width="420" height="315" src="https://youtu.be/&gt;kCmOfRcmkN0">
+</iframe>     
 		</main>
 	</body>
 </html>
