hiring section is improving

--- a/www/hire.html
+++ b/www/hire.html
@@ -42,37 +42,260 @@
 			</span>
 		</nav>
     <main>
-			<h1 id="introduction">Introduction</h1>
+			<h1 id="objective">Objective</h1>
+<p>To work with smart, driven people on distributed systems that solve
+real world problems, reliably and quickly.</p>
+<p>My career has centered on capturing and managing data across the
+supply chain. Of particular interest is software deployed in the field,
+where reliable connectivity cannot be assumed. These industry challenges
+have motivated me to specialise in this area.</p>
+<h1 id="professional-experience">Professional Experience</h1>
+<h2 id="summary">Summary</h2>
 <ul>
-<li>Supply chain</li>
-<li>Field technology</li>
-<li>Network resiliency</li>
+<li>Coded in a wide variety of paradigms, from functional programming to
+systems programming</li>
+<li>Deployed backend, frontend, and desktop software</li>
+<li>Solved challanges using document databases, relational databases and
+key-value stores</li>
+<li>Senior work as a Technical Lead and Solutions Architect.</li>
 </ul>
-<p>My speciality is capturing data across the supply chain. Often in
-remote or</p>
-<p>The technical challenges of capturing data in remote
-environments,</p>
+<h2 id="past-clients">Past Clients</h2>
+<h3 id="supply-chain-consulting">Supply Chain Consulting</h3>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Unique Excellence
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Australia (Remote)
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2022
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+Google docs, Email, Github, Word (pure consulting role)
+</dd>
+</dl>
+<h3 id="remote-water-monitoring">Remote Water Monitoring</h3>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Farmbot Monitoring Solutions
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Australia (Remote)
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2022
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+React, Typescript, IndexedDB
+</dd>
+</dl>
+<h3 id="supply-chain-traceability-for-livestock">Supply Chain
+Traceability for Livestock</h3>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Aglive
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Australia (Remote)
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2020-2021
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+React, Typescript, Node, MongoDB
+</dd>
+</dl>
+<p>Fond memories of this one.</p>
+<h3 id="web-development-agency">Web Development Agency</h3>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Derp Technology (yes, that was really their name…)
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+New Zealand (Remote)
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2020
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+React, Typescript, AWS, Google Maps
+</dd>
+</dl>
 <ul>
-<li>a focus on facilitating the movement and tracking of goods</li>
-<li>data captured in the field</li>
-<li>the fringe of the supply chain, areas with poor connectivity</li>
+<li><p>replacing a paid for theme, and in the process replacing 7k lines
+of SASS with 1k lines of CSS and having it look exactly the
+same.</p></li>
+<li><p>introducing typescript to the codebase - first via jsdoc
+comments, and then finally a pretty trivial transformation at the
+end.</p></li>
 </ul>
-<p>I am a software developer with expertise in supply chain management
-and a focus on creating software solutions that facilitate the movement
-and tracking of goods and services. With additional experience in
-developing software for field use, I have worked with factory workers,
-maintenance workers, meat producers, and aid post workers to create
-custom solutions that streamline operations and improve efficiency. My
-background in supply chain logistics and field technology makes me
-uniquely equipped to solve the challenges associated with these
-areas.</p>
-<h1 id="how-i-can-help">How I can help</h1>
-<p>Real software for real people.</p>
-<p>I’m Experienced CRUD app dev, with a smattering of tech
-lead/architect/consultant thrown in.</p>
-<h1 id="what-im-looking-for">What I’m looking for</h1>
-<p>My biggest goal right now is to work with smart, motivated people in
-an area I’m passionate about - distributed databases.</p>
+<h3 id="election-processing">Election Processing</h3>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Election Services
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Auckland, New Zealand
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2014-2015
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+C++, Qt, Postgres
+</dd>
+</dl>
+<ul>
+<li>Learned C++ on the job</li>
+</ul>
+<h3 id="airport-maintenance-software">Airport Maintenance Software</h3>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+NovoTech Ltd
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Auckland Airport, New Zealand
+</dd>
+</dl>
+<p>My first time writing software professionally, and it had a huge
+impact on me.</p>
+<p>Finally had my degree, but also had a truck-load of doubts if I could
+be effective in the real world.</p>
+<p>Came in with no team, no supervisor, and no guidelines. And I knocked
+out of the park. It was a real confidence booster.</p>
+<p>Note: I was full of functional fervour at the time, so I wrote it in
+F#. No one there even knew or cared what C# or F# was, they just wanted
+a desktop app.</p>
+<h2 id="employment-history">Employment History</h2>
+<h3 id="livestock-product-manufacturer">Livestock Product
+Manufacturer</h3>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Allflex Livestock Intelligence
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Palmerston North, New Zealand
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2016-2020
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+C#, ASP.NET, SQL Server, Dyanmics GP (don’t ask)
+</dd>
+</dl>
+<p>Biggest legacy system I’d worked on to date.</p>
+<p>I learned the value of keeping a system running - our software went
+down, and two factories stopped functioning.</p>
+<p>Exposed to a vertical slice of the whole supply chain</p>
+<h3 id="practice-management-software">Practice Management Software</h3>
+<dl>
+<dt>
+Company
+</dt>
+<dd>
+Gensolve
+</dd>
+<dt>
+Where
+</dt>
+<dd>
+Wellington, New Zealand
+</dd>
+<dt>
+When
+</dt>
+<dd>
+2014-2015 (Office closed)
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+C#, Oracle Database
+</dd>
+</dl>
+<p>This was the first time I saw real life legacy software, and wow was
+it an eye opener.</p>
+<p>They ended up closing the local office, and after a stint of remote
+work I was made red shortly after.</p>
 <h1 id="education">Education</h1>
 <dl>
 <dt>
@@ -191,244 +414,7 @@ Ordering</i>
 </td>
 </tr>
 </tbody>
-</table>
-<h1 id="past-clients">Past Clients</h1>
-<h2 id="supply-chain-consulting">Supply Chain Consulting</h2>
-<dl>
-<dt>
-Company
-</dt>
-<dd>
-Unique Excellence
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Australia (Remote)
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2022
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-Google docs, Email, Github, Word (pure consulting role)
-</dd>
-</dl>
-<h2 id="remote-water-monitoring">Remote Water Monitoring</h2>
-<dl>
-<dt>
-Company
-</dt>
-<dd>
-Farmbot Monitoring Solutions
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Australia (Remote)
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2022
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-React, Typescript, IndexedDB
-</dd>
-</dl>
-<h2 id="supply-chain-traceability-for-livestock">Supply Chain
-Traceability for Livestock</h2>
-<dl>
-<dt>
-Company
-</dt>
-<dd>
-Aglive
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Australia (Remote)
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2020-2021
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-React, Typescript, Node, MongoDB
-</dd>
-</dl>
-<p>Fond memories of this one.</p>
-<h2 id="web-development-agency">Web Development Agency</h2>
-<dl>
-<dt>
-Company
-</dt>
-<dd>
-Derp Technology (yes, that was really their name…)
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-New Zealand (Remote)
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2020
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-React, Typescript, AWS, Google Maps
-</dd>
-</dl>
-<ul>
-<li><p>replacing a paid for theme, and in the process replacing 7k lines
-of SASS with 1k lines of CSS and having it look exactly the
-same.</p></li>
-<li><p>introducing typescript to the codebase - first via jsdoc
-comments, and then finally a pretty trivial transformation at the
-end.</p></li>
-</ul>
-<h2 id="election-processing">Election Processing</h2>
-<dl>
-<dt>
-Company
-</dt>
-<dd>
-Election Services
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Auckland, New Zealand
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2014-2015
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-C++, Qt, Postgres
-</dd>
-</dl>
-<ul>
-<li>Learned C++ on the job</li>
-</ul>
-<h2 id="airport-maintenance-software">Airport Maintenance Software</h2>
-<dl>
-<dt>
-Company
-</dt>
-<dd>
-NovoTech Ltd
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Auckland Airport, New Zealand
-</dd>
-</dl>
-<p>My first time writing software professionally, and it had a huge
-impact on me.</p>
-<p>Finally had my degree, but also had a truck-load of doubts if I could
-be effective in the real world.</p>
-<p>Came in with no team, no supervisor, and no guidelines. And I knocked
-out of the park. It was a real confidence booster.</p>
-<p>Note: I was full of functional fervour at the time, so I wrote it in
-F#. No one there even knew or cared what C# or F# was, they just wanted
-a desktop app.</p>
-<h1 id="employment-history">Employment History</h1>
-<h2 id="livestock-product-manufacturer">Livestock Product
-Manufacturer</h2>
-<dl>
-<dt>
-Company
-</dt>
-<dd>
-Allflex Livestock Intelligence
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Palmerston North, New Zealand
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2016-2020
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-C#, ASP.NET, SQL Server, Dyanmics GP (don’t ask)
-</dd>
-</dl>
-<p>Biggest legacy system I’d worked on to date.</p>
-<p>I learned the value of keeping a system running - our software went
-down, and two factories stopped functioning.</p>
-<p>Exposed to a vertical slice of the whole supply chain</p>
-<h2 id="practice-management-software">Practice Management Software</h2>
-<dl>
-<dt>
-Company
-</dt>
-<dd>
-Gensolve
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Wellington, New Zealand
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2014-2015 (Office closed)
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-C#, Oracle Database
-</dd>
-</dl>
-<p>This was the first time I saw real life legacy software, and wow was
-it an eye opener.</p>
-<p>They ended up closing the local office, and after a stint of remote
-work I was made red shortly after.</p>     
+</table>     
 		</main>
 	</body>
 </html>
