more readable formatting for headers etc

--- a/www/hire.html
+++ b/www/hire.html
@@ -46,9 +46,9 @@
 <p>To work with smart, driven people on distributed systems that solve
 real world problems, reliably and quickly.</p>
 <p>My career has centered on capturing and managing data across the
-supply chain. Of particular interest is software deployed in the field,
-where reliable connectivity cannot be assumed. These industry challenges
-have motivated me to specialise in this area.</p>
+supply chain. The challenges of doing this in the field - where
+connectivity cannot be assumed - has been an enduring motivation in my
+study of distributed systems.</p>
 <hr />
 <h1 id="professional-experience">Professional Experience</h1>
 <h2 id="summary">Summary</h2>
@@ -115,6 +115,7 @@ Tech
 React, Typescript, IndexedDB
 </dd>
 </dl>
+<p><br></p>
 <h3 id="supply-chain-traceability-for-livestock">Supply Chain
 Traceability for Livestock</h3>
 <dl>
@@ -144,6 +145,7 @@ React, Typescript, Node, MongoDB
 </dd>
 </dl>
 <p>Fond memories of this one.</p>
+<p><br></p>
 <h3 id="web-development-agency">Web Development Agency</h3>
 <dl>
 <dt>
@@ -179,6 +181,7 @@ same.</p></li>
 comments, and then finally a pretty trivial transformation at the
 end.</p></li>
 </ul>
+<p><br></p>
 <h3 id="election-processing">Election Processing</h3>
 <dl>
 <dt>
@@ -209,6 +212,7 @@ C++, Qt, Postgres
 <ul>
 <li>Learned C++ on the job</li>
 </ul>
+<p><br></p>
 <h3 id="airport-maintenance-software">Airport Maintenance Software</h3>
 <dl>
 <dt>
@@ -233,6 +237,7 @@ out of the park. It was a real confidence booster.</p>
 <p>Note: I was full of functional fervour at the time, so I wrote it in
 F#. No one there even knew or cared what C# or F# was, they just wanted
 a desktop app.</p>
+<p><br></p>
 <h2 id="employment-history">Employment History</h2>
 <h3 id="livestock-product-manufacturer">Livestock Product
 Manufacturer</h3>
@@ -266,6 +271,7 @@ C#, ASP.NET, SQL Server, Dyanmics GP (don’t ask)
 <p>I learned the value of keeping a system running - our software went
 down, and two factories stopped functioning.</p>
 <p>Exposed to a vertical slice of the whole supply chain</p>
+<p><br></p>
 <h3 id="practice-management-software">Practice Management Software</h3>
 <dl>
 <dt>
